Приведено в соответствие с разбором HW9 + XML Serialization